crates/reinhardt-pages/tests/ui/client_form/choices/fail/skipped_default.rs
use reinhardt_pages::ClientFormChoices;

#[derive(Clone, Default, PartialEq, ClientFormChoices)]
enum ProviderMode {
	#[default]
	#[serde(skip)]
	Archived,
	Live,
}

fn main() {}
